Updates from Overleaf

--- a/Coursework2.tex
+++ b/Coursework2.tex
@@ -90,17 +90,55 @@
 \begin{center}
     % UCL IMAGE
     \vspace*{-3cm}
-    \makebox[\textwidth]{\includegraphics[width=\paperwidth]{Image/UCL_LOGO_new.png}}
+    \makebox[\textwidth]{\includegraphics[width=\paperwidth]{Images/UCL_LOGO_new.png}}
 \end{center}   
     % Title
-    {\LARGE\textbf{Assessment\\
+    {\LARGE\textbf{Coursework 2\\
     % Subtitle
-    CASA0002 – Urban Simulation\\}}
-SN21125032 
+    CASA0011 – Agent-Based Modelling\\}}
+SN21125032 | Word count:
 
 \vspace{5mm} %5mm vertical space
   
-\section{Part 1: London’s underground resilience}
+\section{Research Question}
+
+\section{ODD Description}
+\subsection{Purpose and patterns}
+
+According to ..... This a serious problem related to the lack of street space for pedestrians, and how this affects the rate of injuries caused by car crashes. Models developed on Netlogo related to this field, such as 15min cities ( brief explanation), Town - Traffic and Crowd Simulation( brief explanation), Traffic grid( brief explanation) and Taxi Cabs( brief explanation) illustrate the potentials of micro-simulation related to this field.
+Therefore, this model aims to test if a micro-simulation of a street intersection using pedestrian flows in crossing a street can explain the relationship between sidewalk dimension and waiting time to cross the street. In this model, it is applied...... However, this model does not intend to simulate a realistic street intersection with all the agents. The aim is to intend pedestrian behaviour in the context of commute flows and their relationship with the available space for a given sidewalk.  
+
+Thus, the aim is to .....
+
+The patterns, 
+
+First, a high concentration of people close by pedestrian crossing
+Second, alternation in the density of people in opposite regions of the intersection
+Third, travessy time is not proportional to the concentration of people
+
+\subsection{Entities, state variables, and scales}
+
+
+
+
+
+\subsection{Process overview and scheduling}
+
+\subsection{Design concepts}
+
+
+\subsection{Input data}
+
+
+\subsection{Submodels}
+
+\section{Brief Methodology }
+
+
+
+Limitations
+
+Adding the flow of cars, cyclists and traffic lights would be relevant.
 
 
 
