Updates from Overleaf

--- a/Coursework2.tex
+++ b/Coursework2.tex
@@ -102,6 +102,15 @@ SN21125032 | Word count:
   
 \section{Research Question}
 
+
+What is the impact of pedestrian flows and concentration in urban design at a street intersection?
+
+What is the influence of the number of pedestrians, speed limit, and time to cross a street on the number of pedestrians waiting to cross?
+
+
+How the number of people waiting to cross a street can define the optimal space for sidewalks close to pedestrians crossing?
+
+
 \section{ODD Description}
 \subsection{Purpose and patterns}
 
@@ -166,8 +175,36 @@ The model is developed to simulate pedestrians' movement when they cross the str
 
 \subsection{Design concepts}
 
+\subsubsection{Basic principles}
+
+\subsubsection{Emergence}
+ Despite giving a range of rules for pedestrians' movements, the number of people waiting to cross the streets and the location of people flow is a consequence of the behaviour of agents in the given environment; the output of this micro-simulation depends on this interaction. 
+ 
+\subsubsection{Adaptation}
+
+\subsubsection{Objectives}
+
+\subsubsection{Learning}
+
+\subsubsection{Prediction}
+
+\subsubsection{Sensing}
+
+\subsubsection{Interaction}
+
+\subsubsection{Stochasticity}
+
+\subsubsection{Collectives}
+
+\subsubsection{Observation}
+
+\subsection{Initialization}
 
 \subsection{Input data}
+
+
+num-of-people
+
 
 
 \subsection{Submodels}
@@ -177,6 +214,8 @@ The model is developed to simulate pedestrians' movement when they cross the str
 
 
 \section{Brief Methodology }
+
+The methodology of this analysis is to run an experiment through behaviour space to understand what is the relationship between the number of pedestrians, the speed limit of pedestrians and the time to cross-influence in the number of people that have to wait to cross a street. Thus, as an outcome, build parameters to define what is the priority aspects to consider in urban design focused on the street intersection.
 
 
 
