--- a/References.bib
+++ b/References.bib
@@ -6,3 +6,19 @@
 	author = {Lukas, Jiri},
 	file = {NetLogo User Community Models\::C\:\\Users\\felip\\Zotero\\storage\\TMXE4RA3\\Town - Traffic & Crowd simulation.html:text/html},
 }
+
+@phdthesis{cohen_microscopic_2018,
+	type = {Master dissertation},
+	title = {Microscopic pedestrian simulation: an exploratory application of {Agent}-{Based} modelling},
+	school = {Master dissertation. University College London},
+	author = {Cohen, Jonathan E},
+	year = {2018},
+}
+
+@inproceedings{chen_delineating_2021,
+	title = {Delineating a'15-minute city' an agent-based modeling approach to estimate the size of local communities},
+	booktitle = {Proceedings of the 4th {ACM} {SIGSPATIAL} international workshop on {GeoSpatial} simulation},
+	author = {Chen, Qingqing and Crooks, Andrew T},
+	year = {2021},
+	pages = {29--37},
+}
