Updates from Overleaf

--- a/Coursework2.tex
+++ b/Coursework2.tex
@@ -215,7 +215,7 @@ In the scenario presented, there are initially 75 people(0 to 1000 units). Cross
 
 \subsection{Submodels}
 
-The submodels were built based on the model ( XXXX) 
+The submodels were built based on the model ( \cite{lukas_netlogo_nodate}) 
 
 \subsubsection{move-people}
 This procedure aims to move the person agents with the following rules:
