--- a/References.bib
+++ b/References.bib
@@ -22,3 +22,14 @@
 	year = {2021},
 	pages = {29--37},
 }
+
+@misc{batty_agent-based_2001,
+	title = {Agent-based pedestrian modeling},
+	publisher = {SAGE Publications Sage UK: London, England},
+	author = {Batty, Michael},
+	year = {2001},
+	note = {Issue: 3
+Pages: 321–326
+Publication Title: Environment and planning B: Planning and Design
+Volume: 28},
+}
